[package]
name = "hakatemia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
regex = "1.10.3"
reqwest = "0.11.25"
select = "0.6.0"
tokio = { version = "1.36.0", features = ["full"] }

[[bin]]
name = "crackme"

[[bin]]
name = "tilinlukitus-dos-hyokkaykset"
